lustre/include/obd_class.h
@@ -1138,7 +1138,8 @@ static inline int obd_commitrw(const struct lu_env *env, int cmd,
 			       struct obd_export *exp, struct obdo *oa,
 			       int objcount, struct obd_ioobj *obj,
 			       struct niobuf_remote *rnb, int pages,
-			       struct niobuf_local *local, const int orig_rc)
+			       struct niobuf_local *local, const int orig_rc,
+			       int nob, ktime_t kstart)
 {
 	int rc;
 	ENTRY;
@@ -1154,7 +1155,8 @@ static inline int obd_commitrw(const struct lu_env *env, int cmd,
 	}
 
 	rc = OBP(exp->exp_obd, commitrw)(env, cmd, exp, oa, objcount, obj,
-					 rnb, pages, local, orig_rc);
+					 rnb, pages, local, orig_rc, nob,
+					 kstart);
 
 	RETURN(rc);
 }
